OPENICF-385 / CR-6394 - Fix connector to be able to execute scripts from any URL